# itk-task-c2m3

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml
src/: urls.py
src/auth/: serializers.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  pagination.py  serializers.py  views.py
src/events/migrations/: 0001_initial.py  0002_rename_title_location_name.py  0003_alter_event_event_time_alter_event_id_and_more.py  0004_alter_event_name_alter_location_name.py
src/my_auth/: apps.py  serializers.py  services.py  views.py
src/sync/: admin.py  models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
